--- a/2_Earthquake_Source_Simple_3.ipynb
+++ b/2_Earthquake_Source_Simple_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b2181054",
+   "id": "48d92926",
    "metadata": {},
    "source": [
     "<div style=\"background-color: #28a745 !important; color: white; min-height: 50px; padding: 10px; margin: auto;\">\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19279085",
+   "id": "41088dd6",
    "metadata": {},
    "source": [
     "## Membaca data rekaman gempa\n",
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "8a940f82",
+   "id": "2b7e8bf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aad2d027",
+   "id": "b9022151",
    "metadata": {},
    "source": [
     "Informasi mengenai data dapat kita lihat dengan fungsi `print`:"
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "3c3a8091",
+   "id": "1ffc57a9",
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1080cb1",
+   "id": "8b529928",
    "metadata": {},
    "source": [
     "Dari informasi tentang data rekaman kita dapat melihat ada 3 `trace` dengan komponen BHE,BHN, dan BH dengan frekuensi sampling 20 Hz\n",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "60148bca",
+   "id": "53f7e470",
    "metadata": {},
    "outputs": [
     {
@@ -2084,7 +2084,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6d32413",
+   "id": "5d2b7113",
    "metadata": {},
    "source": [
     "## Mengeplot data rekaman\n",
@@ -2095,7 +2095,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "2bb74463",
+   "id": "28fb255a",
    "metadata": {},
    "outputs": [
     {
@@ -2128,7 +2128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38e6da2b",
+   "id": "8b863cfc",
    "metadata": {},
    "source": [
     "## Melakukan filtering\n",
@@ -2139,7 +2139,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "735cd7f8",
+   "id": "d88f0ce4",
    "metadata": {},
    "outputs": [
     {
@@ -2175,7 +2175,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "1af06159",
+   "id": "a38eaac2",
    "metadata": {},
    "outputs": [
     {
@@ -2211,7 +2211,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "c70b4cc5",
+   "id": "f182c180",
    "metadata": {},
    "outputs": [
     {
@@ -2246,7 +2246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31f0a96c",
+   "id": "b4cb9c8c",
    "metadata": {},
    "source": [
     "### Memotong stream\n",
@@ -2257,7 +2257,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "e15cd702",
+   "id": "1b7dca4b",
    "metadata": {},
    "outputs": [
     {
@@ -2285,6 +2285,7 @@
     }
    ],
    "source": [
+    "from obspy import UTCDateTime\n",
     "start=UTCDateTime(\"2021-01-14T18:31:00\")\n",
     "stop=start + 2*60 #2 menit\n",
     "st_slice=st.copy()\n",
@@ -2294,7 +2295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "729fcb6c",
+   "id": "fd1835e3",
    "metadata": {},
    "source": [
     "### Mengeplot spektrogram\n",
@@ -2305,7 +2306,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "a09857fa",
+   "id": "2ac7e9a5",
    "metadata": {},
    "outputs": [
     {
@@ -2361,7 +2362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33fede50",
+   "id": "21868f4c",
    "metadata": {},
    "source": [
     "## Mengambil `trace` dari `stream`\n",
@@ -2372,7 +2373,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "8d504f29",
+   "id": "ef48076c",
    "metadata": {},
    "outputs": [
     {
@@ -2391,7 +2392,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "a5b14799",
+   "id": "fac921f7",
    "metadata": {},
    "outputs": [
     {
@@ -2424,7 +2425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a952d8e7",
+   "id": "ac032002",
    "metadata": {},
    "source": [
     "metode pada `trace` sebagian besar sama dengan metode pada `stream`:"
@@ -2433,7 +2434,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "1c679d6b",
+   "id": "2dd9b397",
    "metadata": {},
    "outputs": [
     {
@@ -2456,7 +2457,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "c5231928",
+   "id": "ff97526c",
    "metadata": {},
    "outputs": [
     {
@@ -2492,7 +2493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c391fd6d",
+   "id": "e80833f5",
    "metadata": {},
    "source": [
     "### Mengambil informasi dari `trace`\n",
@@ -2503,7 +2504,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "c7f53f2f",
+   "id": "9edb755a",
    "metadata": {},
    "outputs": [
     {
@@ -2534,7 +2535,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "121a79fe",
+   "id": "8684f96d",
    "metadata": {},
    "source": [
     "Jika ingin mengambil informasi spesifik:"
@@ -2543,7 +2544,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "52fc9d42",
+   "id": "c93f454b",
    "metadata": {},
    "outputs": [
     {
@@ -2563,7 +2564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dcab081",
+   "id": "2a9ff8c3",
    "metadata": {},
    "source": [
     "### Mengambil data dari `trace`\n",
@@ -2573,17 +2574,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "a5ed6056",
+   "execution_count": 165,
+   "id": "baf58835",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f1ed2388f70>]"
+       "[<matplotlib.lines.Line2D at 0x7f1ecbfd4f10>]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2601,6 +2602,7 @@
     }
    ],
    "source": [
+    "import matplotlib.pyplot as plt\n",
     "data_BHZ=tr_BHZ.data\n",
     "\n",
     "plt.plot(range(len(data_BHZ)), data_BHZ)"
@@ -2608,7 +2610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a934c74",
+   "id": "591bf628",
    "metadata": {},
    "source": [
     "### Contoh mengeplot gerak partikel\n",
@@ -2619,7 +2621,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "2361d9a4",
+   "id": "ebb9689c",
    "metadata": {},
    "outputs": [
     {
@@ -2639,7 +2641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "036d9429",
+   "id": "df3ee137",
    "metadata": {},
    "source": [
     "#### Sekitar gelombang P\n",
@@ -2650,7 +2652,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "2ce57f16",
+   "id": "cb1418a6",
    "metadata": {},
    "outputs": [
     {
@@ -2691,7 +2693,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0ff1d89",
+   "id": "f3169ed0",
    "metadata": {},
    "source": [
     "#### Mengambil data untuk masing-masing komponen"
@@ -2700,7 +2702,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "3c4470b2",
+   "id": "50e5b1f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2711,7 +2713,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b341a52d",
+   "id": "5ce8df17",
    "metadata": {},
    "source": [
     "#### Mengeplot untuk Z-N"
@@ -2720,7 +2722,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "4430152a",
+   "id": "69600e4a",
    "metadata": {},
    "outputs": [
     {
@@ -2745,7 +2747,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e4ce54e",
+   "id": "37654ac1",
    "metadata": {},
    "source": [
     "#### Mengeplot untuk Z-E"
@@ -2754,7 +2756,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "e7300a72",
+   "id": "3f77349f",
    "metadata": {},
    "outputs": [
     {
@@ -2779,7 +2781,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4be4c55",
+   "id": "489a41ad",
    "metadata": {},
    "source": [
     "#### Mengeplot untuk N-E"
@@ -2788,7 +2790,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "6dc67f81",
+   "id": "1a3a74f1",
    "metadata": {},
    "outputs": [
     {
@@ -2813,7 +2815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f471e778",
+   "id": "a62f5fe6",
    "metadata": {},
    "source": [
     "### Sekitar Gelombang S"
@@ -2822,7 +2824,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "bd50ddf7",
+   "id": "3c99145f",
    "metadata": {},
    "outputs": [
     {
@@ -2864,7 +2866,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "69ad8a14",
+   "id": "27541e87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2876,7 +2878,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "1b99671c",
+   "id": "c9fe0ad8",
    "metadata": {},
    "outputs": [
     {
@@ -2902,7 +2904,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "19a53bad",
+   "id": "59f10586",
    "metadata": {},
    "outputs": [
     {
@@ -2928,7 +2930,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "aba828c1",
+   "id": "1d66fa9d",
    "metadata": {},
    "outputs": [
     {
@@ -2953,7 +2955,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "577e79ab",
+   "id": "f3868c54",
    "metadata": {},
    "source": [
     "### Sekitar gelombang Love"
@@ -2962,7 +2964,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "2e73a831",
+   "id": "81be3b11",
    "metadata": {},
    "outputs": [
     {
@@ -3004,7 +3006,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "3939926a",
+   "id": "ef7c01cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3016,7 +3018,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "280871e4",
+   "id": "919d418a",
    "metadata": {},
    "outputs": [
     {
@@ -3042,7 +3044,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "26c57497",
+   "id": "9331d212",
    "metadata": {},
    "outputs": [
     {
@@ -3068,7 +3070,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "21d8caef",
+   "id": "4dcbc302",
    "metadata": {},
    "outputs": [
     {
@@ -3094,7 +3096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b887e0b",
+   "id": "1356dfe2",
    "metadata": {},
    "outputs": [],
    "source": []
