--- a/2_Earthquake_Source_Simple_1.ipynb
+++ b/2_Earthquake_Source_Simple_1.ipynb
@@ -900,6 +900,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4610e87c",
+   "metadata": {},
+   "source": [
+    "## Latihan\n",
+    "\n",
+    "Stasiun:\n",
+    "```\n",
+    "II\tABPO\t-19.02°\t47.23°\t1528 m  \n",
+    "P 2021-05-14 06:42:16  \n",
+    "S 2021-05-14 06:49:41  \n",
+    "\n",
+    "IC\tLSA\t29.70°\t91.13°\t3660 m  \n",
+    "P 2021-05-14 06:39:15  \n",
+    "S 2021-05-14 06:44:14  \n",
+    "\n",
+    "II\tWRAB\t-19.93°\t134.36°\t366 m  \n",
+    "P 2021-05-14 06:40:58  \n",
+    "S 2021-05-14 06:47:17  \n",
+    "```\n",
+    "Dari data di atas carilah perkiraan episenter menggunakan Metode Lingkaran!\n",
+    "\n",
+    "Bandingkan dengan episenter sebenarnya dari IRIS:\n",
+    "\n",
+    "```\n",
+    "0.1364° N\t96.6442° E\t2021-05-14 06:33:07 UTC\t11.0 km\tmww6.7\tOff W Coast Of Northern Sumatra\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5f9c7955",
    "metadata": {},
    "source": [
