change symbol error and add constrained layout

--- a/2_Earthquake_Source_Simple_2_1.ipynb
+++ b/2_Earthquake_Source_Simple_2_1.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "sehingga dengan Least Square solusinya merupakan:\n",
     "\n",
-    "$$\\Delta m = (G^TG)^{-1}G^Td.$$\n",
+    "$$\\Delta m = (G^TG)^{-1}G^T\\Delta d.$$\n",
     "\n",
     "Nilai $\\Delta m$ ini yang akan dicari setiap iterasi untuk mengoreksi nilai tebakan $m_0$ yang akan terus diupdate sepanjang iterasi.\n",
     "\n",
